0.9.0
==================
  * feat: global keys
  * feat: lock/unlock all tools
  * refactor: always on top by default
  * fix: click on transparent after closing help/settings
  * fix: toolbox always on top

0.8.0
==================

  * feat: always on top button
  * feat: +/- buttons to change onion image opacity
  * fix: help and settings windows have shadow
  * fix: new tools have the right z-index

0.7.0
==================

  * fix: round x,y when move rulers, guides and onions
  * fix: help and settings can be displayed at the same time
  * refactor: move more actions to redux
  * chore: add travis build configuration

0.6.0
==================

  * feat: settings view
  * feat: opt-out analytics
  * feat: shortcut to delete guides/rulers/onions
  * fix: ruler doesn't change z-index
  * chore: typescript 3
  * chore: tslint config

0.5.0
==================

  * feat: add columns tool
  * refactor: better toolbox icon colors
  * refactor: use redux for state

0.4.1
==================

  * fix: icons

0.4.0
==================

  * feat: basic analytics

0.3.2
==================

  * fix: not possible to click on the mini-toolbox if another tools is on top #39

0.3.1
==================

  * fix: now the ruler can be resized only from right+bottom

0.3.0
==================

  * feat: new icon / #24
  * fix: coords not rounded
  * refactor: remove unused files (redux, etc)

0.2.0
==================

  * ?

0.1.1
==================

  * fix: the toolbox now is a position that doesn't interfere with the rest of the elements

0.1.0
==================

  * fix: toolbox can be dragged out of the screen

0.0.6
==================

  * feat: Grouped colors

0.0.5
==================

  * feat: tooltips on all tools
  * feat: lock/Unlock guides, rulers, and images
  * feat: set guides, and rulers colors with the keyboard
  * feat: move guides, rulers, and images with the keyboard arrows +1px and w/ shift +10px
  * fix: display image size
  * fix: remove toolbox icons margin
